# PrintAr

./: build.gradle  gradle.properties  yipai.keystore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yipai/printar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Common.cpp  Common.h  Log.h  VideoData.cpp  VideoData.h  ar.cc  ar.hpp  arvideo.cc  arvideo.hpp  jniar.cc  native-lib.cpp  renderer.hpp
app/src/main/cpp/include/easyar/: player.hpp
app/src/main/java/com/yipai/printar/: App.java
app/src/main/java/com/yipai/printar/adapter/: CacheAdapter.java
app/src/main/java/com/yipai/printar/adapter/itemcachedata/: ItemCacheData.java
app/src/main/java/com/yipai/printar/ar/: ArCameraActivity.java  GLView.java  NativeAr.java  Renderer.java
app/src/main/java/com/yipai/printar/bean/: VideoData.java  VideoDataRealm.java
app/src/main/java/com/yipai/printar/constant/: Path.java  RequestCode.java
app/src/main/java/com/yipai/printar/ui/: ArActivity.java  StartActivity.java  YipaiDemoActivity.java
app/src/main/java/com/yipai/printar/ui/dialog/: DialogServer.java  SingleChoiceDialog.java
app/src/main/java/com/yipai/printar/ui/realm/: VideoData.java
app/src/main/java/com/yipai/printar/ui/view/: EasyLoadPageRecyclerView.java  ShotImageRecyclerView.java
app/src/main/java/com/yipai/printar/utils/: ArDataSheet.java  BaseDataShare.java  BitmapUtil.java  ImageLoader.java  PackageUtil.java  RealmUtils.java  VideoDataSheet.java
app/src/main/java/com/yipai/printar/utils/dialog/: DialogServer.java
app/src/main/java/com/yipai/printar/utils/file/: AssetsUtil.java  FileUtil.java  FileUtilBase.java  SdcardFileUtil.java
app/src/main/java/com/yipai/printar/utils/log/: CLog.java  CLogImpl.java  CLogImplEx.java  FileLog.java  FileStreamLog.java  FileWriterLog.java  NoLog.java  TimeUtil.java
app/src/main/res/drawable/: ic_camera_scanner.xml  ic_catch_normal.xml  ic_catch_press.xml  ic_catch_selector.xml  ic_movice_selector.xml  ic_movie_frame.xml  ic_movie_normal.xml  ic_movie_press.xml  ic_printer.xml  ic_printer_normal.xml  ic_printer_press.xml  ic_printer_selector.xml  ic_scanner_normal.xml  ic_scanner_press.xml  ic_scanner_selector.xml
app/src/main/res/layout/: activity_ar_camera.xml  activity_main.xml  activity_start.xml  activity_yipai_demo.xml  content_yipai_demo.xml  item_shotview.xml  layout_erv_error.xml  layout_erv_more.xml  layout_erv_nomore.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/yipai/printar/: ExampleUnitTest.java
